--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: iai 'ell
 
 # Short bio or description (displayed in the header)
-description: Data Scientist
+description: Data Scientist in New York City
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/17513828?v=3&s=460
